--- a/about.html
+++ b/about.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About & Contact - My Personal Website</title>
+    <title data-page-title="About & Contact - [owner]'s Website">About & Contact - My Personal Website</title>
     <link rel="stylesheet" href="src/css/styles.css">
+    <script src="src/js/site-config.js"></script>
     <script src="src/js/load-nav.js"></script>
     <script src="src/js/dark-mode.js"></script>
 </head>
 <body>
     <header>
-        <h1>My Personal Website</h1>
+        <h1 data-site-title>My Personal Website</h1>
     </header>
     <div id="navigation-placeholder"></div>
     <div class="container">
         <h2>About Me</h2>
         <p>
-            Hello! I'm [Your Name], a [Your Profession/Field] based in [Your Location]. 
+            Hello! I'm <span data-owner-name>Your Name</span>, a [Your Profession/Field] based in [Your Location]. 
             I'm passionate about [Your Interests/Specialties], and I use this blog to share my thoughts, 
             experiences, and knowledge about these topics.
         </p>
@@ -40,7 +41,7 @@
         </p>
     </div>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear())</script> Your Name. All rights reserved.</p>
+        <p>&copy; <script>document.write(new Date().getFullYear())</script> <span data-owner-name>Your Name</span>. All rights reserved.</p>
     </footer>
 </body>
 </html>
