--- a/blogs/我的哈巴雪山之旅.html
+++ b/blogs/我的哈巴雪山之旅.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的哈巴雪山之旅 | Your Name's Blog</title>
+    <title data-blog-title="我的哈巴雪山之旅 | [owner]'s Blog">我的哈巴雪山之旅 | Your Name's Blog</title>
     <link rel="stylesheet" href="../src/css/styles.css">
+    <script src="../src/js/site-config.js"></script>
     <script src="../src/js/load-nav.js"></script>
     <script src="../src/js/dark-mode.js"></script>
     <script src="../src/js/toc-generator.js"></script>
@@ -12,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>My Personal Website</h1>
+        <h1 data-site-title>My Personal Website</h1>
     </header>
     <div id="navigation-placeholder"></div>
     <div class="container">
@@ -340,7 +341,7 @@
         </article>
     </div>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear())</script> Your Name. All rights reserved.</p>
+        <p>&copy; <script>document.write(new Date().getFullYear())</script> <span data-owner-name>Your Name</span>. All rights reserved.</p>
     </footer>
     <div id="progress-container">
         <div id="reading-progress"></div>
