--- a/tags.html
+++ b/tags.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tags - My Personal Website</title>
+    <title data-page-title="Tags - [owner]'s Website">Tags - My Personal Website</title>
     <link rel="stylesheet" href="src/css/styles.css">
+    <script src="src/js/site-config.js"></script>
     <script src="src/js/load-nav.js"></script>
     <script src="src/js/dark-mode.js"></script>
     <style>
@@ -44,7 +45,7 @@
 </head>
 <body>
     <header>
-        <h1>My Personal Website</h1>
+        <h1 data-site-title>My Personal Website</h1>
     </header>
     <div id="navigation-placeholder"></div>
     <div class="container">
@@ -182,5 +183,8 @@
 
         window.addEventListener('hashchange', showRelevantPosts);
     </script>
+    <footer>
+        <p>&copy; <script>document.write(new Date().getFullYear())</script> <span data-owner-name>Your Name</span>. All rights reserved.</p>
+    </footer>
 </body>
 </html>
