--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-page-title="My Personal Website">My Personal Website</title>
+    <title data-page-title="simoncos's site">simoncos's site</title>
     <link rel="stylesheet" href="src/css/styles.css">
     <script src="src/js/site-config.js"></script>
     <script src="src/js/load-nav.js"></script>
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header>
-        <h1 data-site-title>My Personal Website</h1>
+        <h1 data-site-title>simoncos's site</h1>
     </header>
     <div id="navigation-placeholder"></div>
     <div class="container">
         <section id="home">
-            <h2>Welcome to My Website</h2>
-            <p>This is the home page of my personal website. Feel free to explore!</p>
+            <!-- <h2>Welcome to My Website</h2> -->
+            <!-- <p>This is the home page of my site. Feel free to explore!</p> -->
         </section>
 
         <section id="blog">
