improve the table of content ux

--- a/blogs/my-haba-snow-mountain-journey.en.html
+++ b/blogs/my-haba-snow-mountain-journey.en.html
@@ -11,6 +11,7 @@
     <script src="../src/js/toc-generator.js"></script>
     <script src="../src/js/progress-bar.js"></script>
     <script src="../src/js/back-to-top.js"></script>
+    <script src="../src/js/mobile-scroll-ui.js"></script>
 </head>
 <body>
     <header>
