--- a/about.html
+++ b/about.html
@@ -16,25 +16,16 @@
     <div id="navigation-placeholder"></div>
     <div class="container">
         <h2>About Me</h2>
-        <p>
-            Hello! I'm <span data-owner-name>Your Name</span>, a [Your Profession/Field] based in [Your Location]. 
-            I'm passionate about [Your Interests/Specialties], and I use this blog to share my thoughts, 
-            experiences, and knowledge about these topics.
-        </p>
-        <p>
-            [Add more details about your background, education, work experience, or any other relevant information]
-        </p>
-
-        <h2>Contact Me</h2>
-        <p>
-            I'm always excited to connect with like-minded individuals, potential collaborators, 
-            or anyone interested in my work. Feel free to reach out to me through any of the following methods:
-        </p>
         <ul>
-            <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn Profile</a></li>
-            <li>Twitter: <a href="https://twitter.com/yourhandle" target="_blank">@YourHandle</a></li>
-            <li>GitHub: <a href="https://github.com/yourusername" target="_blank">Your GitHub Profile</a></li>
+            <li>simoncos | Che ZHAO (趙澈) | connecting the dots.</li>
+            <li>A full stack engineer in AI / Data, based in Hong Kong.</li>
+        </ul>
+        <h2>Contact Me</h2>
+        <ul>
+            <li>Email: <a href="mailto:l.z.simon@hotmail.com">l.z.simon@hotmail.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/chezhao/" target="_blank">https://www.linkedin.com/in/chezhao/</a></li>
+            <li>X: <a href="https://x.com/simonc_os" target="_blank">@simonc_os</a></li>
+            <li>GitHub: <a href="https://github.com/simoncos" target="_blank">https://github.com/simoncos</a></li>
         </ul>
         <p>
             I typically respond within 24-48 hours. Looking forward to hearing from you!
