--- a/navigation.html
+++ b/navigation.html
@@ -4,7 +4,7 @@
         <li><a href="#" data-page="blogs.html">Blogs</a></li>
         <li><a href="#" data-page="tags.html">Tags</a></li>
         <li><a href="#" data-page="series.html">Series</a></li>
-        <!-- <li><a href="#" data-page="about.html">About</a></li> -->
+        <li><a href="#" data-page="about.html">About</a></li>
     </ul>
 </nav>
 <div class="dark-mode-container">
