--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <h2>About Me</h2>
         <ul>
             <li>simoncos | Che ZHAO (趙澈) | connecting the dots.</li>
-            <li>A full stack engineer in AI / Data, based in Hong Kong.</li>
+            <li>A full stack builder in AI / Data, based in Hong Kong.</li>
         </ul>
         <h2>Contact Me</h2>
         <ul>
